--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
+
 <body>
   <h1>嗨！我是 Tong En Shih 🌸</h1>
   <p>這是我第一個 GitHub Pages 網站。</p>
 
+  <button id="themeToggle">切換主題</button>
   <button id="btnShow">點我看驚喜</button>
+
   <div id="msg"></div>
+
+  <footer>
+    <p>© 2025 Tong En Shih · 使用 jQuery 製作</p>
+  </footer>
 </body>
 </html>
-add index.html
